--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Touch Anywhere to Play Music</title>
+    <title>Ly My Babe</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
